--- a/install.yaml
+++ b/install.yaml
@@ -95,13 +95,13 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: webstocket-connection.service.manager
+  name: websocket-connection.service.manager
 spec:
   group: service.manager
   scope: Namespaced
   names:
-    kind: WebStocketConnection
-    plural: webstocket-connection
+    kind: WebSocketConnection
+    plural: websocket-connection
     shortNames:
       - "wscnn"
   versions:
@@ -119,10 +119,6 @@ spec:
                 node:
                   type: string
                   default:
-                # 连接句柄
-                fd:
-                  type: integer
-                  default: 0
                 # 通道
                 channel:
                   type: string
